# gkrellm

./: .gitignore  CMakeLists.txt  Makefile  README.md  _config_mac.sh
cmake/: FindSDL2.cmake
imgui/: CMakeLists.txt  imgui.cpp  imgui_impl_sdl_gl3.cpp  imgui_impl_sdl_gl3.h
src/: App.cpp  App.hpp  CMakeLists.txt  CPUModule.cpp  CPUModule.hpp  DateTimeModule.cpp  DateTimeModule.hpp  HostnameUsernameModule.cpp  HostnameUsernameModule.hpp  IMonitorDisplay.hpp  IMonitorModule.hpp  Ncurses.cpp  Ncurses.hpp  NetworkModule.cpp  NetworkModule.hpp  OSInfoModule.cpp  OSInfoModule.hpp  RAMModule.cpp  RAMModule.hpp  SDL.cpp  SDL.hpp  main.cpp
